Mike redid the compass animation part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true">
-    </uses-feature>
+    <!-- Declare features required by the app -->
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature android:name="android.hardware.sensor.compass" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -15,19 +16,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Thecompass"
         tools:targetApi="31">
+
+        <!-- Navigation Activity -->
         <activity
             android:name=".NavigationActivity"
             android:exported="false" />
+
+        <!-- Settings Activity -->
         <activity
             android:name=".SettingActivity"
             android:exported="false"
             android:theme="@style/Theme.Thecompass" />
+
+        <!-- Main Activity (Launcher) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
