Added starting animation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,15 +44,13 @@
             android:name=".SettingActivity"
             android:exported="false"
             android:theme="@style/Theme.Thecompass" /> <!-- Main Activity (Launcher) -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+        <activity android:name=".SplashActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
