--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,7 @@
 /build
+/src/main/res/layout/
+/app/release/
+/app/release/baselineProfiles/0/app-release.dm/
+/app/release/baselineProfiles/1/app-release.dm/
+/app/release/output-metadata.json/
+
